[phoenix] Menu: No linebreaks in subitems. Fixes #974.
git-svn-id: http://svn.freetz.org/trunk@5523 f5190166-0702-4917-9039-51ec32eddaf5

--- a/root/usr/share/style/phoenix/base.css
+++ b/root/usr/share/style/phoenix/base.css
@@ -193,6 +193,7 @@ ul.menu li {
 }
 ul.menu ul li {
     float: none;
+    white-space: nowrap;
 }
 ul.menu > li {
     position: relative;
